8.10.0/IDE/Specification/RulesOther/README.md
## <p id="ruleother1">版面資訊通則</p>
* 語系: 依登入的平台語系顯示版面多語
* 資料: 依指定的專案語系顯示資料多語

## <p id="ruleother2">OnlineHelp通則</p>
* 依登入之平台語系, 開啟對應語系的OnlineHelp檔案
* 依指定錨點, 駐留至該錨點下的內容

## <p id="ruleother4">挑選表單檔區通則</p>
* ...

## <p id="ruleother5">MAE加註儲存通則</p>
* 當 [新增表單/報表][link_AddFormReport]的`設計類型`為APP, 介面上被隱藏的欄位, 若存在以下條件, 亦必須寫入資料庫
    * 對應的實體欄位不允空白
    * 第一次進入編輯模式, 有給初始值者
    * 被連動更新者 (例：[元件加註_基本設定][link_ObjectAnnotation]的`僅供顯示`有勾選，則`游標可駐留`須寫入勾選、`可駐留之狀態`為瀏覽)

## <p id="ruleother6">權限驗証通則</p>
* 權限控管原則說明
    * 編輯權限(異動資料) / 處理方式 = 按鍵除能
        * 單據無儲存權限, 則按鍵.增、修、刪、存，除能
            * 例：模版 / 按鍵.增、修、刪、存、專案預設</br>
                ![pic][image_editAuthority1]
        * 按鍵會影響資料, 除能
            * 例：規格關聯 / 新增資料區 / 按鍵.儲存</br>
                ![pic][image_editAuthority2]
    * 檢視權限 / 處理方式 = 訊息
        * 單據無檢視檢限, 則執行開單按鍵時, 顯示訊息【標題: 執行存回，發生下列錯誤 / 訊息內容: 你並未授權執行此功能。 / 按鍵: 確定】
            * 確定: 關閉訊息盒
    * 架構節點, 依登入帳號角色, 判斷顯示 / 隱藏</br>
        ![pic][image_nodeAuthority] <!-- 原始檔案: 架構節點權限 -->

## <p id="ruleother7">存回不允空白檢控通則</p>
* 不允空白檢控, 符合條件時, 顯示訊息盒, 並以紅框線標註錯誤的欄位
    * 訊息盒:【標題: 執行存回，發生下列錯誤 / 訊息內容: 以下資料未填寫正確 *錯誤欄位名* / 按鍵: 確定】
        * 確定: 關閉訊息盒
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruleother8">存回其它檢控通則</p>
* 其它檢控, 符合條件時, 顯示訊息盒, 並以紅框線標註錯誤的欄位
    * 訊息盒:【標題: 執行存回，發生下列錯誤 / 訊息內容: 以下資料未通過驗證 *錯誤訊息內容* / 按鍵: 確定】
        * 確定: 關閉訊息盒
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruleother9">打樣流程通則</p>
* 流程: IDE檢錯 > IDE發行 > AMS匯入 > AMS噴碼 > RTE開啟預覽表單 / IDE開啟QRCODE
* 點擊取得取得打樣狀態，執行時顯示訊息盒【標題: 系統通知  /  訊息內容:打樣中...】，依條件判斷打樣流程			
   * 無打樣紀錄 或 打樣單元異動日期時間 > 打樣日期時間		
     * 執行檢錯
   * 有打樣記錄 且 打樣失敗: 顯示訊息盒【標題: 系統通知  /  訊息內容: 打樣錯誤內容  /  按鍵: 打樣、取消】		
     * 打樣: 進入打樣流程
     * 取消: 關閉訊息盒。
   * 有打樣記錄 且 打樣單元異動日期時間<=打樣日期時間 (即打樣成功):
     * 顯示訊息盒【標題: 訊息通知  /  訊息內容: 表單已打樣成功, 要重新打樣? 或預覽前版結果? /  按鍵: 打樣、驗證、取消】
       * 若 (打樣類型=表單 且 設計類型=APP) 或 (打樣類型=事件 且 事件中存在APP表單)，則訊息盒中增加顯示:
         * 1.行動條碼(QRCode)；
         * 2.行動條碼下方訊息【請在手機上開啟 ruRU MAE 應用程式，點選登入畫面的掃描圖示，再掃描此行動條碼。】
           * 訊息盒示意圖如下:
           * ![image_QRCode]
       * 打樣: 1.關閉訊息盒；2.執行打樣API，傳入:專案ID、表單成品料號、專案語系、打樣類型
       * 驗證: (打樣類型=表單 且 設計類型=APP) 或 (打樣類型=事件 且 事件中全是APP表單) 則隱藏，否則 顯示
         * 執行時，若訊息盒中不存在行動條碼，則關閉訊息盒
         * 依打樣專案料號+設計類型，決定預覽方式(請參考打樣成功的預覽方式)
       * 取消: 關閉訊息盒。	
 * 進入打樣後，顯示訊息盒【標題: 訊息通知 / 訊息內容: 定時檢查目前的打樣狀態，顯示"打樣狀態..."  /  按鍵: 等候清單 】	
   * 等候清單: 開啟<打樣等候清單>
 * 打樣成功: 依打樣專案料號 + 設計類型，決定預覽方式
   * 設計類型=標準，另開視窗: 開啟Client端打樣表單的畫面 (視窗大小依表單寬高決定)
   * 設計類型=RWD，另開新分頁: 開啟Client端打樣表單的畫面
   * 設計類型=APP，查詢打樣表單或事件是否存在"超連結唯一號"	
     * 若存在值，依超連結資訊產生QRCode內容，並訊息(請參考訊息盒示意圖)
     * 若不存在，
       * 取得超連結唯一號
       * 依超連結資訊產生QRCode內容，並顯示QRCode訊息(請參考訊息盒示意圖)
 * 打樣失敗: 顯示訊息盒【標題: 系統訊息 / 訊息內容: 打樣失敗! 請進入狀態查看錯誤原因  /  按鍵: 打樣狀態、確定】	
   * 打樣狀態: 點擊開啟<打樣狀態查詢>，傳入:專案ID、打樣單元料號、單元名稱、打樣類型
   * 確定: 關閉表單
* 作業流程    
    * <ps>待補</ps>

<!-- 圖示 -->
[image_editAuthority1]:attachment/editAuthority1.png
[image_editAuthority2]:attachment/editAuthority2.png
[image_nodeAuthority]:attachment/nodeAuthority.png
[image_QRCode]:attachment/PrototypingQRCode.png

<!-- 超連結 -->
[link_AddFormReport]:../AddFormReport/README "新增表單/報表"
[link_ObjectAnnotation]:../ObjectAnnotation/README "元件加註_基本設定"