8.10.1/IDE/Specification/RulesOther/README.md
## <p id="ruleother1">版面資訊通則</p>
* 語系: 依登入的平台語系顯示版面多語
* 資料: 依指定的專案語系顯示資料多語

## <p id="ruleother2">OnlineHelp通則</p>
* 依登入之平台語系, 開啟對應語系的OnlineHelp檔案
* 依指定錨點, 駐留至該錨點下的內容

## <p id="ruleother4">挑選表單檔區通則</p>
* ...

## <p id="ruleother5">MAE加註儲存通則</p>
* 當 [新增表單/報表][link_AddFormReport]的`設計類型`為APP, 介面上被隱藏的欄位, 若存在以下條件, 亦必須寫入資料庫
    * 對應的實體欄位不允空白
    * 第一次進入編輯模式, 有給初始值者
    * 被連動更新者 (例：[元件加註_基本設定][link_ObjectAnnotation]的`僅供顯示`有勾選，則`游標可駐留`須寫入勾選、`可駐留之狀態`為瀏覽)

## <p id="ruleother6">權限驗証通則</p>
* 權限控管原則說明
    * 編輯權限(異動資料) / 處理方式 = 按鍵除能
        * 單據無儲存權限, 則按鍵.增、修、刪、存，除能
            * 例：模版 / 按鍵.增、修、刪、存、專案預設</br>
                ![pic][image_editAuthority1]
        * 按鍵會影響資料, 除能
            * 例：規格關聯 / 新增資料區 / 按鍵.儲存</br>
                ![pic][image_editAuthority2]
    * 檢視權限 / 處理方式 = 訊息
        * 單據無檢視檢限, 則執行開單按鍵時, 顯示訊息【標題: 執行存回，發生下列錯誤 / 訊息內容: 你並未授權執行此功能。 / 按鍵: 確定】
            * 確定: 關閉訊息盒
    * 架構節點, 依登入帳號角色, 判斷顯示 / 隱藏</br>
        ![pic][image_nodeAuthority] <!-- 原始檔案: 架構節點權限 -->

## <p id="ruleother7">存回不允空白檢控通則</p>
* 不允空白檢控, 符合條件時, 顯示訊息盒, 並以紅框線標註錯誤的欄位
    * 訊息盒:【標題: 執行存回，發生下列錯誤 / 訊息內容: 以下資料未填寫正確 *錯誤欄位名* / 按鍵: 確定】
        * 確定: 關閉訊息盒
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruleother8">存回其它檢控通則</p>
* 其它檢控, 符合條件時, 顯示訊息盒, 並以紅框線標註錯誤的欄位
    * 訊息盒:【標題: 執行存回，發生下列錯誤 / 訊息內容: 以下資料未通過驗證 *錯誤訊息內容* / 按鍵: 確定】
        * 確定: 關閉訊息盒
    * 作業流程    
        * <ps>待補</ps>

## <p id="ruleother9">打樣流程通則</p>
* 流程: IDE檢錯 > IDE發行 > AMS匯入 > AMS噴碼 > RTE開啟預覽表單 / IDE開啟QRCODE
* 點擊取得取得打樣狀態，執行時顯示訊息盒【標題: 系統通知  /  訊息內容:打樣中...】，依條件判斷打樣流程			
   * 無打樣紀錄 或 打樣單元異動日期時間 > 打樣日期時間		
     * 執行檢錯
   * 有打樣記錄 且 打樣失敗: 顯示訊息盒【標題: 系統通知  /  訊息內容: 打樣錯誤內容  /  按鍵: 打樣、取消】		
     * 打樣: 進入打樣流程
     * 取消: 關閉訊息盒。
   * 有打樣記錄 且 打樣單元異動日期時間<=打樣日期時間 (即打樣成功):
     * 顯示訊息盒【標題: 訊息通知  /  訊息內容: 表單已打樣成功, 要重新打樣? 或預覽前版結果? /  按鍵: 打樣、驗證、取消】
       * 若 (打樣類型=表單 且 設計類型=APP) 或 (打樣類型=事件 且 事件中存在APP表單)，則訊息盒中增加顯示:
         * 1.行動條碼(QRCode)；
         * 2.行動條碼下方訊息【請在手機上開啟 ruRU MAE 應用程式，點選登入畫面的掃描圖示，再掃描此行動條碼。】
           * 訊息盒示意圖如下:
           * ![image_QRCode]
       * 打樣: 1.關閉訊息盒；2.執行打樣API，傳入:專案ID、表單成品料號、專案語系、打樣類型
       * 驗證: (打樣類型=表單 且 設計類型=APP) 或 (打樣類型=事件 且 事件中全是APP表單) 則隱藏，否則 顯示
         * 執行時，若訊息盒中不存在行動條碼，則關閉訊息盒
         * 依打樣專案料號+設計類型，決定預覽方式(請參考打樣成功的預覽方式)
       * 取消: 關閉訊息盒。	
 * 進入打樣後，顯示訊息盒【標題: 訊息通知 / 訊息內容: 定時檢查目前的打樣狀態，顯示"打樣狀態..."  /  按鍵: 等候清單 】	
   * 等候清單: 開啟<打樣等候清單>
 * 打樣成功: 依打樣專案料號 + 設計類型，決定預覽方式
   * 設計類型=標準，另開視窗: 開啟Client端打樣表單的畫面 (視窗大小依表單寬高決定)
   * 設計類型=RWD，另開新分頁: 開啟Client端打樣表單的畫面
   * 設計類型=APP，查詢打樣表單或事件是否存在"超連結唯一號"	
     * 若存在值，依超連結資訊產生QRCode內容，並訊息(請參考訊息盒示意圖)
     * 若不存在，
       * 取得超連結唯一號
       * 依超連結資訊產生QRCode內容，並顯示QRCode訊息(請參考訊息盒示意圖)
 * 打樣失敗: 顯示訊息盒【標題: 系統訊息 / 訊息內容: 打樣失敗! 請進入狀態查看錯誤原因  /  按鍵: 打樣狀態、確定】	
   * 打樣狀態: 點擊開啟<打樣狀態查詢>，傳入:專案ID、打樣單元料號、單元名稱、打樣類型
   * 確定: 關閉表單
* 作業流程    
    * <ps>待補</ps>

## <p id="ruleother10">使用頁面鎖定通則</p>

* 目前有設定編輯所定的範圍為:表單設計版面(傳統+RWD+APP)、報表設計版面、生成表單版面、駐留順序、流程圖、選單、檢視表
  * 表單設計版面(傳統+RWD+APP):同步、編輯、存回
  * 報表設計版面:同步、編輯、存回
  * 生成表單版面:執行、附加
  * 駐留順序:存回
  * 流程圖:編輯、存回
  * 選單:編輯、存回
  * 檢視表:編輯、存回
* 頁面未執行資料寫入時，將每30秒更新鎖定時間
  * 呼叫ajax error時，則每10秒詢問一次ajax是否可正常呼叫，當可呼叫時，才重新每30秒更新鎖定時間
  * 若更新鎖定時間時，發現資料已被解除鎖定，則停止更新鎖定時間
  * 編輯模式下切換專案、表單、事件、專案語系...停止更新鎖定時間
* 頁面取消鎖定時需將更新鎖定時間定時器清除
* IIS reStart，不立即執行解除鎖定(排程每小時執行一次，訂於兩點解除過期鎖定)
  * 過期判定:最後更新時間超過七天
  * 首次重啟程式，若最後更新鎖定時間未超過8hr(預計更新程式時間不會超過8hr)，則會先更新為程式重啟時間
* 當有資料被鎖定時，跳出訊息:發生多用戶鎖定衝突!(詢問框:可執行重試或取消)
  * 若資料鎖定最後更新時間超過45秒時，則覆蓋鎖定時間
* 當鎖定資料筆正在寫入時(存回)
  * 判斷資料是否已被他人取消鎖定
    * 若是則跳出訊息:資料已被解除鎖定，無法存回。
    * 若否則將鎖定資料lock，不可被覆蓋
  * 資料寫入完成或失敗需解除鎖定資料
* 重整瀏覽器頁面或關閉瀏覽器頁面會清除該頁面的鎖定紀錄

## <p id="ruleother11">個資加密提示通則</p>

* 引用欄位
  * 資料表欄位:個資加密有勾選 或 密碼處理有勾選，則為加密資料
  * 檢視表欄位:(個資加密有勾選 且 個資解密無勾選) 或 密碼處理有勾選，則為加密資料
  * 表單元件:對應來源欄位(個資加密有勾選 且 個資解密無勾選) 或 密碼處理有勾選，則為加密資料
  * 例外:符合以上條件時另須判斷以下條件
    * 當引用元件加註[樹狀控制]且加註內容檔區座落為單一檔區時，才為加密資料(必須無其他加註符合父子雙檔)
    * 當引用元件加註[顯示設定]且加註內容若內容處理存在【被突顯、僅變更顏色】時，才為加密資料(必須無其他加註符合固定值、欄位組合、填入行號)
  * 報表元件
    * 來源給值_資料表欄位:個資加密有勾選 或 密碼處理有勾選，則為加密資料
    * 來源給值_檢視表欄位:(個資加密有勾選且 個資解密無勾選) 或 密碼處理有勾選，則為加密資料
    * 來源給值_報表元件:依挑選報表元件的加密狀態判別是否則為加密資料
  * 加密資料提示方式
    * 字體顏色藍色:#0a6dab
    * 使用class:encryption

## <p id="ruleother12">型態檢查通則</p>
  * 依下列方式區分型態的群組, 同群組下表示型態相同	
    * 1.文字: string.字串, remark.備註, only.全唯碼
    * 2.數字: bigint.整數(bigint), int.整數(int), smallint.整數(smallint), tinyint.整數(tinyint), numeric.數字
    * 3.日期: date.日期, datetime.日期時間
    * 4.邏輯(布林): bit.位元
    * 5.二進位: binary.二進位
  * 運行時, 會直接存入資料庫的功能, 且 給值單元類別=表單元件、資料表欄位、檢視表欄位, 須增加判斷長度是否合法。
    * 目前僅下列加註位置, 須增加此規則檢查 
      |單元類別 |加註行為選項-位置 |
      |--------|---------------- |
      |資料交易 |目的欄位 |  
      |元件加註 |嵌入物件-檔案容器控制 |  
      |按鍵加註 |預存程序-傳入/回傳內容 |       
      |按鍵加註 |資料交換-匯入 |  
      |按鍵加註 |檔案傳輸-上傳 |                   
      |按鍵加註 |郵件發送-儲存連結資訊、郵件儲存資訊 |  
      |按鍵加註 |推播通知-儲存連結資訊、另存推播記錄 |      
    * 依型態群組判斷長度，給值來源的長度須小於目的長度
      * 1.文字類: string.字串 = only.全唯碼 < remark.備註
      * 2.數值類: 
        * 若來源與目的皆為整數型態, 則依型態決定: tinyint.整數(tinyint) < smallint.整數(smallint) < int.整數(int) < bigint.整數(bigint)
        * 若來源為(整數vs數字 or 數字vs數字), 則比對欄位長度, 長度計算須扣除小數位(長度-小數位)
          * 案例： 
            * 來源型態/長度: bigint.整數(bigint)/16 
            * 目的型態/長度: numeric.數字/20.6 
            * 結果: 16 > (20-6) , 即 16 > 14  => **檢查結果: 不合法**
      * 3.其餘型態群組不需檢查長度      

<!-- 圖示 -->
[image_editAuthority1]:attachment/editAuthority1.png
[image_editAuthority2]:attachment/editAuthority2.png
[image_nodeAuthority]:attachment/nodeAuthority.png
[image_QRCode]:attachment/PrototypingQRCode.png

<!-- 超連結 -->
[link_AddFormReport]:../AddFormReport/README "新增表單/報表"
[link_ObjectAnnotation]:../ObjectAnnotation/README "元件加註_基本設定"